[package]
name = "ess-reader"
version = "0.1.0"
authors = ["Valkum <rudi.floren@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["hansol", "ess", "samsung", "photovoltaics"]
repository = "https://github.com/valkum/ess_reader"
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "LICENSE"]


[dependencies]
reqwest = { version = "0.9.0", default-features = false, features = ["default-tls-vendored"] }
select = {git = "https://github.com/valkum/select.rs", version = "0.5.0"}

confy = "0.3.0"
structopt = "0.2.0"
prettytable-rs = "0.8.0"
fern = "0.5.0"
log = "0.4.0"

failure = "0.1.0"
serde = "1.0.0"
chrono = "0.4.0"
influxdb = { version = "0.0.4" }
tokio = "0.1.0"
futures = "0.1.0"
ctrlc = "3.1.0"


[dev-dependencies]
mockito = "0.20.0"

[package.metadata.deb]
maintainer = "Rudi Floren <rudi.floren@gmail.com>"
copyright = "2019, Rudi Floren <rudi.floren@gmail.com>"
depends = "$auto, systemd"
assets = [
    ["extras/ess-reader.timer", "lib/systemd/system/ess-reader.timer.d/ess-reader-systemd.conf", "644"],
    ["extras/ess-reader.service", "lib/systemd/system/ess-reader.service.d/ess-reader-systemd.conf", "644"],
    ["target/release/ess-reader", "usr/bin/", "755"]
]